NIFI-14109 Refactored Extensions with Uniform Property and Relationship Lists (#9600)
Ensured the variables of property descriptors are called PROPERTY_DESCRIPTORS. For parent processor classes which defined common properties, made getCommonPropertyDescriptors() method for children to use to load them. Ensured lists of PropertyDescriptor objects has each PropertyDescriptor on its own line and sets of RelationShip objects has each Relationship on its own line to improve readability.

Signed-off-by: David Handermann <exceptionfactory@apache.org>